--- a/notebooks/02_retinex_illumination_estimation.ipynb
+++ b/notebooks/02_retinex_illumination_estimation.ipynb
@@ -126,26 +126,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5c74aa14",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ✅ Total layers = 6\n",
     "class IlluminationNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(IlluminationNet, self).__init__()\n",
-    "\n",
+    "    # 256 * 256\n",
+    "    # encoder block \n",
+    "    # starts here\n",
     "        self.encoder = nn.Sequential(\n",
     "            nn.Conv2d(3, 32, 3, padding=1),\n",
     "            nn.ReLU(),\n",
     "            nn.Conv2d(32, 32, 3, padding=1),\n",
     "            nn.ReLU()\n",
     "        )\n",
+    "     #ends here  -> Encoder depth: 2 Conv layers\n",
     "\n",
     "        self.decoder = nn.Sequential(\n",
     "            nn.Conv2d(32, 1, 3, padding=1),\n",
     "            nn.Sigmoid()   # Illumination map in [0,1]\n",
     "        )\n",
+    "        # Decoder depth: 1 Conv layer\n",
+    "        # Total Conv layers = 3\n",
+    "        #Total activation layers = 3 (2 ReLU + 1 Sigmoid)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.encoder(x)\n",
