--- a/notebooks/notebook3.ipynb
+++ b/notebooks/notebook3.ipynb
@@ -164,19 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5410081d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Basically it is a reusable building block it is being used in the multilscale unet multiple times\n",
     "class ConvBlock(nn.Module):\n",
     "    def __init__(self, in_ch, out_ch):\n",
     "        super().__init__()\n",
     "        self.block = nn.Sequential(\n",
-    "            nn.Conv2d(in_ch, out_ch, 3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Conv2d(out_ch, out_ch, 3, padding=1),\n",
-    "            nn.ReLU()\n",
+    "            nn.Conv2d(in_ch, out_ch, 3, padding=1),  # extract features \n",
+    "            nn.ReLU(), # and it adds non linearity to the model\n",
+    "            nn.Conv2d(out_ch, out_ch, 3, padding=1), # extract features \n",
+    "            nn.ReLU() # and it adds non linearity to the model\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -185,21 +186,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f872b902",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# It is full Enhancement Network with encoder and decoder and skip connections.....................\n",
     "class MultiScaleUNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
-    "        self.enc1 = ConvBlock(3, 64)\n",
-    "        self.enc2 = ConvBlock(64, 128)\n",
+    "        self.enc1 = ConvBlock(3, 64)  \n",
+    "        self.enc2 = ConvBlock(64, 128) \n",
+    "        self.pool = nn.MaxPool2d(2) # this is max pooling layer it will reduce the spatial dimensions by half so the output will be 128 * 128 * 128 (this will move to bottleneck)\n",
     "\n",
-    "        self.pool = nn.MaxPool2d(2)\n",
-    "\n",
-    "        self.bottleneck = ConvBlock(128, 256)\n",
+    "        self.bottleneck = ConvBlock(128, 256) # here the convblock will extract features and the output will be 64 * 64 * 256 (this is the bottleneck layer)\n",
     "\n",
     "        self.up2 = nn.ConvTranspose2d(256, 128, 2, stride=2)\n",
     "        self.dec2 = ConvBlock(256, 128)\n",
@@ -210,16 +211,20 @@
     "        self.final = nn.Conv2d(64, 3, 1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        e1 = self.enc1(x)\n",
-    "        e2 = self.enc2(self.pool(e1))\n",
+    "        e1 = self.enc1(x) # suppose the image is 256 * 256 * 3 the output will be 256 * 256 * 64\n",
+    "        e2 = self.enc2(self.pool(e1)) # the input will be 256 * 256 * 64 and the output will be 256 * 256 * 128  THIS IS ALSO CALLED DOWNSAMPLING\n",
     "\n",
-    "        b = self.bottleneck(self.pool(e2))\n",
     "\n",
-    "        d2 = self.up2(b)\n",
-    "        d2 = self.dec2(torch.cat([d2, e2], dim=1))\n",
+    "        b = self.bottleneck(self.pool(e2)) # pooling e2 (128 × 128 × 128 #⬇️ pooling 64 × 64 × 128)\n",
+    "        #Pooling reduced spatial size, and the convolution inside the bottleneck increased the number of channels from 128 to 256.\n",
+    "        \n",
+    "        # UPSAMPLING\n",
+    "\n",
+    "        d2 = self.up2(b) # 128 × 128 × 128\n",
+    "        d2 = self.dec2(torch.cat([d2, e2], dim=1)) # Skip connection + channel explosion (on purpose)  #Decoder ConvBlock reduces channels \n",
     "\n",
     "        d1 = self.up1(d2)\n",
-    "        d1 = self.dec1(torch.cat([d1, e1], dim=1))\n",
+    "        d1 = self.dec1(torch.cat([d1, e1], dim=1))  \n",
     "\n",
     "        return torch.sigmoid(self.final(d1))\n"
    ]
